force-app/main/default/objects/Proposal_Content__c/Proposal_Content__c.object-meta.xml
<CustomObject>
    <label>Proposal Content</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Proposal Content Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Contents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>