force-app/main/default/objects/Proposal_Content__c/fields/Allow_Continual_Upload__c.field-meta.xml
<CustomField>
    <fullName>Allow_Continual_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow users to upload additional version of documents even after application has been submitted for LSR.</description>
    <inlineHelpText>Allow users to upload additional version of documents even after application has been submitted for LSR.</inlineHelpText>
    <label>Allow Continual Upload</label>
    <type>Checkbox</type>
</CustomField>