force-app/main/default/objects/Proposal_Content__c/fields/Annual_Electric_Energy_Usage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Electric_Energy_Usage__c</fullName>
    <label>Annual Electric Energy Usage (kWh)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>