force-app/main/default/objects/Proposal_Content__c/fields/Array_Azimuth__c.field-meta.xml
<CustomField>
    <fullName>Array_Azimuth__c</fullName>
    <label>Array Azimuth</label>
    <length>80</length>
    <type>Text</type>
</CustomField>