force-app/main/default/objects/Proposal_Content__c/fields/Array_Rating_DC_kW__c.field-meta.xml
<CustomField>
    <fullName>Array_Rating_DC_kW__c</fullName>
    <label>Array Rating (DC kW)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>