force-app/main/default/objects/Proposal_Content__c/fields/Array_Tilt__c.field-meta.xml
<CustomField>
    <fullName>Array_Tilt__c</fullName>
    <label>Array Tilt</label>
    <length>80</length>
    <type>Text</type>
</CustomField>