force-app/main/default/objects/Proposal_Content__c/fields/Array_TSRF__c.field-meta.xml
<CustomField>
    <fullName>Array_TSRF__c</fullName>
    <label>Array TSRF</label>
    <length>80</length>
    <type>Text</type>
</CustomField>