force-app/main/default/objects/Proposal_Content__c/fields/Array_Type__c.field-meta.xml
<CustomField>
    <fullName>Array_Type__c</fullName>
    <label>Array Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dual Axis Tracking</fullName>
            </value>
            <value>
                <fullName>Fixed Ground Mount</fullName>
            </value>
            <value>
                <fullName>Fixed Parking Canopy</fullName>
            </value>
            <value>
                <fullName>Fixed Roof Mount</fullName>
            </value>
            <value>
                <fullName>Single Axis Tracking</fullName>
            </value>
            <value>
                <fullName>Fixed Rooftop Canopy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>