force-app/main/default/objects/Proposal_Content__c/fields/Battery_Cell_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Battery_Cell_Manufacturer__c</fullName>
    <description>Battery Cell Manufacturer or Other Storage OEM</description>
    <inlineHelpText>Battery Cell Manufacturer or Other Storage OEM</inlineHelpText>
    <label>Battery Cell Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>