force-app/main/default/objects/Proposal_Content__c/fields/Bio_Diesel__c.field-meta.xml
<CustomField>
    <fullName>Bio_Diesel__c</fullName>
    <label>Bio-Diesel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>