force-app/main/default/objects/Proposal_Content__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <label>Block</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>