force-app/main/default/objects/Proposal_Content__c/fields/CCF__c.field-meta.xml
<CustomField>
    <fullName>CCF__c</fullName>
    <label>CCF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>