force-app/main/default/objects/Proposal_Content__c/fields/CNG__c.field-meta.xml
<CustomField>
    <fullName>CNG__c</fullName>
    <label>CNG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>