force-app/main/default/objects/Proposal_Content__c/fields/CNG_Up_Grade__c.field-meta.xml
<CustomField>
    <fullName>CNG_Up_Grade__c</fullName>
    <label>CNG Up-Grade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>