force-app/main/default/objects/Proposal_Content__c/fields/Concept_Paper__c.field-meta.xml
<CustomField>
    <fullName>Concept_Paper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concept Paper?</label>
    <type>Checkbox</type>
</CustomField>