force-app/main/default/objects/Proposal_Content__c/fields/Conditionally_Required__c.field-meta.xml
<CustomField>
    <fullName>Conditionally_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditionally Required</label>
    <type>Checkbox</type>
</CustomField>