force-app/main/default/objects/Proposal_Content__c/fields/Configured_From_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Configured_From_Solicitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Just to distinguish, whether the record is copied from Project Content or not.</description>
    <label>Configured From Solicitation</label>
    <type>Checkbox</type>
</CustomField>