force-app/main/default/objects/Proposal_Content__c/fields/Cool__c.field-meta.xml
<CustomField>
    <fullName>Cool__c</fullName>
    <label>Cool</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>