force-app/main/default/objects/Proposal_Content__c/fields/Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Date_Value__c</fullName>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>