force-app/main/default/objects/Proposal_Content__c/fields/DC_System_Size_kW__c.field-meta.xml
<CustomField>
    <fullName>DC_System_Size_kW__c</fullName>
    <label>DC System Size (kW)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>