force-app/main/default/objects/Proposal_Content__c/fields/DER_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>DER_Integration_Type__c</fullName>
    <label>DER Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar photovoltaic (PV)</fullName>
            </value>
            <value>
                <fullName>Combined heat and power (CHP)</fullName>
            </value>
            <value>
                <fullName>Fuel cell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>