force-app/main/default/objects/Proposal_Content__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>