force-app/main/default/objects/Proposal_Content__c/fields/DMF__c.field-meta.xml
<CustomField>
    <fullName>DMF__c</fullName>
    <label>DMF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>