force-app/main/default/objects/Proposal_Content__c/fields/DOC__c.field-meta.xml
<CustomField>
    <fullName>DOC__c</fullName>
    <label>DOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>