force-app/main/default/objects/Proposal_Content__c/fields/DOC_CCF__c.field-meta.xml
<CustomField>
    <fullName>DOC_CCF__c</fullName>
    <label>DOC &amp; CCF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>