force-app/main/default/objects/Proposal_Content__c/fields/Document_Criteria_Met__c.field-meta.xml
<CustomField>
    <fullName>Document_Criteria_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Criteria Met?</label>
    <type>Checkbox</type>
</CustomField>