force-app/main/default/objects/Proposal_Content__c/fields/Document_Group__c.field-meta.xml
<CustomField>
    <fullName>Document_Group__c</fullName>
    <description>S-01253: To display a document section name dynamically</description>
    <label>Document Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required Documents</fullName>
            </value>
            <value>
                <fullName>Optional Documents</fullName>
            </value>
            <value>
                <fullName>Other Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>