force-app/main/default/objects/Proposal_Content__c/fields/Document_Notes__c.field-meta.xml
<CustomField>
    <fullName>Document_Notes__c</fullName>
    <label>Document Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>