force-app/main/default/objects/Proposal_Content__c/fields/Document_Placement__c.field-meta.xml
<CustomField>
    <fullName>Document_Placement__c</fullName>
    <label>Document Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>