force-app/main/default/objects/Proposal_Content__c/fields/DPF__c.field-meta.xml
<CustomField>
    <fullName>DPF__c</fullName>
    <label>DPF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>