force-app/main/default/objects/Proposal_Content__c/fields/Due_diligence_Value__c.field-meta.xml
<CustomField>
    <fullName>Due_diligence_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Due diligence Value</label>
    <type>Checkbox</type>
</CustomField>