force-app/main/default/objects/Proposal_Content__c/fields/Duration_of_Discharge_hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Discharge_hours__c</fullName>
    <label>Duration of Discharge (hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>