force-app/main/default/objects/Proposal_Content__c/fields/E85__c.field-meta.xml
<CustomField>
    <fullName>E85__c</fullName>
    <label>E85</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>