force-app/main/default/objects/Proposal_Content__c/fields/Elec_Charg__c.field-meta.xml
<CustomField>
    <fullName>Elec_Charg__c</fullName>
    <label>Elec. Charg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>