force-app/main/default/objects/Proposal_Content__c/fields/Eng_Rep__c.field-meta.xml
<CustomField>
    <fullName>Eng_Rep__c</fullName>
    <label>Eng Rep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>