force-app/main/default/objects/Proposal_Content__c/fields/Estimated_Annual_Output_KWhac__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Output_KWhac__c</fullName>
    <label>Estimated Annual Output (KWhac)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>