force-app/main/default/objects/Proposal_Content__c/fields/Estimated_Ideal_Annual_Production__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Ideal_Annual_Production__c</fullName>
    <label>Estimated Ideal Annual Production</label>
    <length>80</length>
    <type>Text</type>
</CustomField>