force-app/main/default/objects/Proposal_Content__c/fields/Explanation_Required_On__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Required_On__c</fullName>
    <label>Explanation Required On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>