force-app/main/default/objects/Proposal_Content__c/fields/Fuel_Maker__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Maker__c</fullName>
    <label>Fuel Maker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>