force-app/main/default/objects/Proposal_Content__c/fields/Gallons_of_Biodiesel__c.field-meta.xml
<CustomField>
    <fullName>Gallons_of_Biodiesel__c</fullName>
    <label>Gallons of Biodiesel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>