force-app/main/default/objects/Proposal_Content__c/fields/Garag_Mods__c.field-meta.xml
<CustomField>
    <fullName>Garag_Mods__c</fullName>
    <label>Garag Mods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>