force-app/main/default/objects/Proposal_Content__c/fields/Heavy_Duty__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Duty__c</fullName>
    <label>Heavy Duty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>