force-app/main/default/objects/Proposal_Content__c/fields/Hide_From_External_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Hide_From_External_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>00011069: Hide From External Reviewer?</description>
    <label>Hide From External Reviewer?</label>
    <type>Checkbox</type>
</CustomField>