force-app/main/default/objects/Proposal_Content__c/fields/Installation_Location__c.field-meta.xml
<CustomField>
    <fullName>Installation_Location__c</fullName>
    <label>Installation Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoors</fullName>
            </value>
            <value>
                <fullName>Outdoors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>