force-app/main/default/objects/Proposal_Content__c/fields/Installed_Storage_Capacity_kWh_AC__c.field-meta.xml
<CustomField>
    <fullName>Installed_Storage_Capacity_kWh_AC__c</fullName>
    <label>Installed Storage Capacity, kWh (AC)</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>