force-app/main/default/objects/Proposal_Content__c/fields/Is_Energy_Storage_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Energy_Storage_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your project include an energy storage system?</description>
    <inlineHelpText>Does your project include an energy storage system?</inlineHelpText>
    <label>Is Energy Storage System</label>
    <type>Checkbox</type>
</CustomField>