force-app/main/default/objects/Proposal_Content__c/fields/Kilogram_of_HC__c.field-meta.xml
<CustomField>
    <fullName>Kilogram_of_HC__c</fullName>
    <label>Kilogram of HC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>