force-app/main/default/objects/Proposal_Content__c/fields/Low_Duty__c.field-meta.xml
<CustomField>
    <fullName>Low_Duty__c</fullName>
    <label>Low Duty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>