force-app/main/default/objects/Proposal_Content__c/fields/LPG__c.field-meta.xml
<CustomField>
    <fullName>LPG__c</fullName>
    <label>LPG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>