force-app/main/default/objects/Proposal_Content__c/fields/Mandatory_by_default__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_by_default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory by default</label>
    <type>Checkbox</type>
</CustomField>