force-app/main/default/objects/Proposal_Content__c/fields/Medium_Duty__c.field-meta.xml
<CustomField>
    <fullName>Medium_Duty__c</fullName>
    <label>Medium Duty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>