force-app/main/default/objects/Proposal_Content__c/fields/Module_Type__c.field-meta.xml
<CustomField>
    <fullName>Module_Type__c</fullName>
    <label>Module Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Thin Film</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>