force-app/main/default/objects/Proposal_Content__c/fields/New_Service__c.field-meta.xml
<CustomField>
    <fullName>New_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Service</label>
    <type>Checkbox</type>
</CustomField>