force-app/main/default/objects/Proposal_Content__c/fields/Other_Additional_Storage_Systm_Integrtor__c.field-meta.xml
<CustomField>
    <fullName>Other_Additional_Storage_Systm_Integrtor__c</fullName>
    <label>Other Additional Storage Systm Integrtor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>