force-app/main/default/objects/Proposal_Content__c/fields/Other_Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Installation_Type__c</fullName>
    <label>Other Installation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>