force-app/main/default/objects/Proposal_Content__c/fields/Other_Solar_Storage_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Other_Solar_Storage_Configuration__c</fullName>
    <label>Other Solar / Storage Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>