force-app/main/default/objects/Proposal_Content__c/fields/Other_Technology_Chemistry_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Technology_Chemistry_Type__c</fullName>
    <label>Other Technology / Chemistry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>