force-app/main/default/objects/Proposal_Content__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Proposal_Content__c</referenceTo>
    <relationshipLabel>Proposal Contents</relationshipLabel>
    <relationshipName>Proposal_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>