force-app/main/default/objects/Proposal_Content__c/fields/Petroleum_Displaced_in_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Petroleum_Displaced_in_Gallons__c</fullName>
    <label>Petroleum Displaced in Gallons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>