force-app/main/default/objects/Proposal_Content__c/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <description>semicolon separated</description>
    <label>Picklist Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>