force-app/main/default/objects/Proposal_Content__c/fields/Picklist_Value_Answer__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value_Answer__c</fullName>
    <description>Picklist Value Answer</description>
    <label>Picklist Value Answer</label>
    <type>TextArea</type>
</CustomField>