force-app/main/default/objects/Proposal_Content__c/fields/Proposal_Question_Answer__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Question_Answer__c</fullName>
    <label>Proposal Question Answer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>