force-app/main/default/objects/Proposal_Content__c/fields/Proposal_Site__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Site</label>
    <referenceTo>Proposal_Site__c</referenceTo>
    <relationshipLabel>Proposal Contents</relationshipLabel>
    <relationshipName>Proposal_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>