force-app/main/default/objects/Proposal_Content__c/fields/Separate_Energy_Storage_Inverter__c.field-meta.xml
<CustomField>
    <fullName>Separate_Energy_Storage_Inverter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Separate Energy Storage Inverter?</label>
    <type>Checkbox</type>
</CustomField>