force-app/main/default/objects/Proposal_Content__c/fields/Service_Class__c.field-meta.xml
<CustomField>
    <fullName>Service_Class__c</fullName>
    <label>Service Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SC1 Residential</fullName>
            </value>
            <value>
                <fullName>SC2 Small General</fullName>
            </value>
            <value>
                <fullName>SC2 Non-demand Small General</fullName>
            </value>
            <value>
                <fullName>SC3 Large General Demand</fullName>
            </value>
            <value>
                <fullName>Other non-demand</fullName>
            </value>
            <value>
                <fullName>Other demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>