force-app/main/default/objects/Proposal_Content__c/fields/Solar_Storage_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Solar_Storage_Configuration__c</fullName>
    <label>Solar / Storage Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC-Coupled</fullName>
            </value>
            <value>
                <fullName>DC-Coupled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sample Value 3</fullName>
                <isActive>false</isActive>
                <label>Sample Value 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>