force-app/main/default/objects/Proposal_Content__c/fields/Storage_Inverter_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Storage_Inverter_Manufacturer__c</fullName>
    <label>Storage Inverter Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>