force-app/main/default/objects/Proposal_Content__c/fields/Storage_Inverter_Nameplate_kW_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Storage_Inverter_Nameplate_kW_Capacity__c</fullName>
    <label>Storage Inverter Nameplate kW Capacity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>