force-app/main/default/objects/Proposal_Content__c/fields/Storage_System_Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>Storage_System_Installation_Type__c</fullName>
    <label>Storage System Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Storage with Community Solar</fullName>
            </value>
            <value>
                <fullName>Storage with Remote Solar</fullName>
            </value>
            <value>
                <fullName>Storage Behind a Customer Meter with Load and On-Site Solar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>