force-app/main/default/objects/Proposal_Content__c/fields/Storage_System_Vendor_Integrator__c.field-meta.xml
<CustomField>
    <fullName>Storage_System_Vendor_Integrator__c</fullName>
    <label>Storage System Vendor / Integrator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>