force-app/main/default/objects/Proposal_Content__c/fields/Storage_Technology_Chemistry_Type__c.field-meta.xml
<CustomField>
    <fullName>Storage_Technology_Chemistry_Type__c</fullName>
    <label>Storage Technology / Chemistry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lithium Ion</fullName>
            </value>
            <value>
                <fullName>Lead Acid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Thermal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>