force-app/main/default/objects/Proposal_Content__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Year 1</fullName>
            </value>
            <value>
                <fullName>Year 2</fullName>
            </value>
            <value>
                <fullName>Year 3</fullName>
            </value>
            <value>
                <fullName>Year 4</fullName>
            </value>
            <value>
                <fullName>Year 5</fullName>
            </value>
            <value>
                <fullName>Base Incentive</fullName>
            </value>
            <value>
                <fullName>Affordable Solar Incentive</fullName>
            </value>
            <value>
                <fullName>NYSERDA DG Integrated Report</fullName>
            </value>
            <value>
                <fullName>Inspection Report</fullName>
            </value>
            <value>
                <fullName>IOU Official Report</fullName>
            </value>
            <value>
                <fullName>Energy Assessment Report</fullName>
            </value>
            <value>
                <fullName>SEQR Notice of Determination</fullName>
            </value>
            <value>
                <fullName>Certificate of Completion</fullName>
            </value>
            <value>
                <fullName>Recycling Receipt</fullName>
            </value>
            <value>
                <fullName>Utility Interconnect Letter</fullName>
            </value>
            <value>
                <fullName>Final Inspection Certificate</fullName>
            </value>
            <value>
                <fullName>Building Permit</fullName>
            </value>
            <value>
                <fullName>System Installation Incentive</fullName>
            </value>
            <value>
                <fullName>Signed Application</fullName>
            </value>
            <value>
                <fullName>Project Close-out</fullName>
            </value>
            <value>
                <fullName>Request Extension Document</fullName>
            </value>
            <value>
                <fullName>CESIR Extension Request Document</fullName>
            </value>
            <value>
                <fullName>Signed Application - Primary Energy Consultant</fullName>
            </value>
            <value>
                <fullName>Signed Application - Tenant</fullName>
            </value>
            <value>
                <fullName>Signed Application - Site Owner</fullName>
            </value>
            <value>
                <fullName>Signed Application - Payee</fullName>
            </value>
            <value>
                <fullName>Signed Application - Applicant</fullName>
            </value>
            <value>
                <fullName>Project Application</fullName>
            </value>
            <value>
                <fullName>Modeler Qualification</fullName>
            </value>
            <value>
                <fullName>Signed Application - Stakeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>