force-app/main/default/objects/Proposal_Content__c/fields/Supported_File_Type__c.field-meta.xml
<CustomField>
    <fullName>Supported_File_Type__c</fullName>
    <label>Supported File Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pdf only</fullName>
            </value>
            <value>
                <fullName>pdf or excel only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>