force-app/main/default/objects/Proposal_Content__c/fields/System_Losses__c.field-meta.xml
<CustomField>
    <fullName>System_Losses__c</fullName>
    <label>System Losses</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>