force-app/main/default/objects/Proposal_Content__c/fields/Tons_of_CO2__c.field-meta.xml
<CustomField>
    <fullName>Tons_of_CO2__c</fullName>
    <label>Tons of CO2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>